(ITGM#7): кнопку "register now" переименовал в "зарегистрироваться" + форматирование текста чутка поправил (описание слета)

--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -46,7 +46,7 @@ title: IT Global Meetup #7
     <h1>IT Global Meetup #7</h1>
     <p>2 апреля 2016 c 11.00 до 18.00 <br> КДЦ "Club House", пр. Медиков д.3 к.1</p>
     <br>
-    <a class="button button-small button-line-light html-popup" href="register.html">register now</a>
+    <a class="button button-small button-line-light html-popup" href="register.html">зарегистрироваться</a>
   </div>
 </div>        
 <!-- FULLSCREEN SLIDER -->
@@ -122,14 +122,15 @@ title: IT Global Meetup #7
 
       <div class="col-lg-12 text-center">
         <h1>IT Global Meetup #7</h1>
-        <p class="lead">слет IT-сообществ Санкт-Петербурга и Ленинградской области. <br>
+        <p class="lead">Слет IT-сообществ Санкт-Петербурга и Ленинградской области. <br>
           Цель мероприятия - обмен профессиональным опытом между IT-специалистами.<br>
-          Общение происходит на "островках сообществ", где участники знакомятся, обсуждают различные профессиональные темы, высказывают мнения, спорят и ищут решения.</p>
+          Общение происходит на "островках сообществ", где участники знакомятся, <br>
+          обсуждают профессиональные темы, высказывают мнения, спорят и ищут решения.</p>
       </div>
 
-      <div style="width=550" height="300" margin-left="auto" margin-right="auto"></div>
+        <!--отступ между "описанием слета" и "обмен опытом"/"личный брендинг"/"нетворкинг"-->
+      <div style="width: 550px; height: 300px; margin-left:auto; margin-right:auto"></div>
 
-      
       <div class="col-lg-10 col-lg-offset-1 col-md-12 text-center">
         <div class="row">
         
@@ -371,7 +372,7 @@ title: IT Global Meetup #7
         <p class="lead text-center">Мероприятие для IT-специалистов, участие бесплатное.<br> Обязательная регистрация.</p>
       </div>
       <div class="col-lg-12 text-center">
-        <a class="button button-small button-line-light html-popup" href="register.html">register now</a>
+        <a class="button button-small button-line-light html-popup" href="register.html">зарегистрироваться</a>
       </div>
     </div>
   </div>
