--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -272,7 +272,7 @@ title: IT Global Meetup #7
     <div class="row">
       <div class="col-lg-12">
       
-        <h3 class="">Программа</h3>
+        <h3 class="">Общая программа мероприятия</h3>
         <p class="lead">Программа мероприятия нацелена на обмен опытом и общением с коллегами из других компаний.</p>
         
         <!-- SCHEDULE TAB -->
@@ -341,21 +341,25 @@ title: IT Global Meetup #7
   </div>
 </section>
 
-<!-- DOWNLOAD -->
+<!-- DOWNLOAD PROGRAMM (ссылка на программу) -->
 <section id="download">
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2">
+      <div class="col-lg-12 col-lg-offset-2">
         <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-3 prog-icon">
+          <div class="col-lg-2 col-md-2 col-sm-1 prog-icon">
             <span class="pe-4x pe-7s-note2 program-icon"></span>
             <!-- <img class="img-responsive" src="img/download.png" alt=""> -->
           </div>
-          <div class="col-lg-8 col-md-8 col-sm-9">
-            <h3>Программа сообществ</h3>
-            <p>В рамках слета, у каждого IT-сообщества будет свой островок с подготовленной программой. Программа каждого островка состоит из 4-х секций по 45 минут, в рамках которых вы можете обменяться профессиональным опытом по заявленной теме.</p>
+          <div class="col-lg-12 col-md-10 col-sm-12">
+            <h3>Программы мероприятий сообществ</h3>
+            <p>У каждого IT-сообщества в рамках слета  будет свой "островок".<br>
+               На островках сообщества представят заранее подготовленные программы.<br>
+               Каждая программа состоит из 4-х секций (докладов/презентаций) по 45 минут.<br>
+               В рамках секций вы сможете получить новые знания, задать вопросы,<br>
+               поделиться профессиональным опытом и обменяться контактами.</p>
             <br>
-            <a class="button button-small button-line-dark" href="#">download pdf</a>
+            <a class="button button-small button-line-dark" href="#">открыть программу</a>
           </div>
         </div>
       </div>
@@ -369,7 +373,8 @@ title: IT Global Meetup #7
     <div class="row">
       <div class="col-lg-12">
         <h3 class="text-center">Регистрация</h3>
-        <p class="lead text-center">Мероприятие для IT-специалистов, участие бесплатное.<br> Обязательная регистрация.</p>
+        <p class="lead text-center">Целевая аудитория мероприятия - IT-специалисты.<br>
+                                    Участие бесплатное. Обязательным условием является регистрация.</p>
       </div>
       <div class="col-lg-12 text-center">
         <a class="button button-small button-line-light html-popup" href="register.html">зарегистрироваться</a>
@@ -387,11 +392,21 @@ title: IT Global Meetup #7
         <p class="lead">Инициативу и слет поддерживают лучшие IT-компании.</p>
         <div id="sponsors-carousel">
           {% for sponsor in site.data.itgm7_sponsors %}
-          <a href="{{sponsor.link}}" target="_blank">
+          <a href="{{sponsor.link}}" target="_blank" title="{{sponsor.desc}}">
+
             <div class="sponsor col-md-3">
-                <!-- <img class="img-responsive" src="img/sponsor2.png" alt=""> -->
-                <img class="img-responsive" src="{{sponsor.logo}}" height="80px" alt="">
+                <img class="img-responsive" src="{{sponsor.logo}}" height="80px" alt="{{sponsor.title}}">
+                    {% if sponsor.level == "Золотой партнер" %}
+                        <b><div class="label-sponsor-gold" >{{sponsor.level}}</div></b>
+                    {% elsif sponsor.level == "Серебряный партнер" %}
+                        <div class="label-sponsor-silver" >{{sponsor.level}}</div>
+                    {% elsif sponsor.level == "Организатор" %}
+                        <div class="label-sponsor-initiator" >{{sponsor.level}}</div>
+                    {% else %}
+                        {{sponsor.level}}
+                    {% endif %}
             </div>
+
           </a>
           {% endfor %}
         </div>
@@ -421,18 +436,21 @@ title: IT Global Meetup #7
   </div>
 </section>
 
-<!-- DONATION -->
+<!-- DONATION (Поддержка мероприятия) -->
 <section id="donation">
   <div class="container">
     <div class="row">
+
       <div class="col-lg-12">
         <h3 class="text-center">Поддержка мероприятия</h3>
-        <p class="lead text-center">Если вы тоже хотите поддержать инициативу и мероприятие. <br>Будем признательны!</p>
+        <p class="lead text-center">Участие в мероприятии бесплатное, тем не менее, у нас всегда есть "расходы".<br>
+                                    Многое нам приходится оплачивать (например, расходные материалы).<br>
+                                    Если вы имеете возможность поддержать мероприятие финансово - мы будем вам очень признательны!</p>
       </div>
 
-      <div class="donate-form">
-        <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/shop.xml?account=410011943203218&quickpay=shop&payment-type-choice=on&writer=seller&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%BA%D0%B0+%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D0%BE%D0%B3%D0%BE+%D0%BC%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D1%8F&targets-hint=&default-sum=500&button-text=03&fio=on&successURL=http%3A%2F%2Fpiter-united.ru" width="450" height="198"></iframe>
-      </div>
+      <div class="donate-form"><iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/shop.xml?account=410011943203218&quickpay=shop&payment-type-choice=on&writer=seller&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%BA%D0%B0+%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D0%BE%D0%B3%D0%BE+%D0%BC%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D1%8F&targets-hint=&default-sum=500&button-text=03&fio=on&successURL=http%3A%2F%2Fpiter-united.ru" width="450" height="198"></iframe></div>
+
+      <p class="lead text-center"><i>Вы можете поддержать нас финансово (любой суммой), а можете <a href="mailto:piterunited@gmail.com">стать волонтером</a></i>.</p>
     </div>
   </div>
 </section>
