--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -231,7 +231,7 @@ title: IT Global Meetup #7
               <div class="speaker">
                   <div class="caption text-center">
                       <h4>{{ community.title }}</h4>
-                      <p class="company">Санкт-Петербург</p>
+                      <p class="community">Санкт-Петербург</p>
                   </div>   
               </div>
           </li>
@@ -251,7 +251,7 @@ title: IT Global Meetup #7
                 
                 <div class="caption text-center">
                     <h4>Stanley Willis</h4>
-                    <p class="company">Fermentum Co.</p>
+                    <p class="community">Fermentum Co.</p>
                 </div>   
             </div>
         </li> -->
