--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -214,7 +214,7 @@ title: IT Global Meetup #7
 <!-- <iframe src="https://player.vimeo.com/video/138511320?title=0&byline=0&portrait=0" width="100%" height="506" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
                  
 <!-- COMMUNITIES -->
-<section id="speakers">
+<section id="communities">
   <div class="container">
     <div class="row">
             
