--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -373,7 +373,7 @@ title: IT Global Meetup #7
     <div class="row">
       <div class="col-lg-12">
         <h3 class="text-center">Регистрация</h3>
-        <p class="lead text-center">Целевая аудитория мероприятия - IT-специалисты.<br>
+        <p class="lead text-center">Целевая аудитория мероприятия: IT-специалисты.<br>
                                     Участие бесплатное. Обязательным условием является регистрация.</p>
       </div>
       <div class="col-lg-12 text-center">
