--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -444,7 +444,7 @@ title: IT Global Meetup #7
       <div class="col-lg-12">
         <h3 class="text-center">Поддержка мероприятия</h3>
         <p class="lead text-center">Участие в мероприятии бесплатное, тем не менее, у нас всегда есть "расходы".<br>
-                                    Многое нам приходится оплачивать (например, расходные материалы).<br>
+                                    Например, нам нужно оплачивать расходные материалы (бумагу, маркеры), флипчарты и т.д.<br>
                                     Если вы имеете возможность поддержать мероприятие финансово - мы будем вам очень признательны!</p>
       </div>
 
