--- a/itgm7/speaker-detail.html
+++ b/itgm7/speaker-detail.html
@@ -5,7 +5,7 @@
             	<button title="Close (Esc)" type="button" class="mfp-close">×</button>
                 
                 <div class="col-md-5 col-lg-5 no-padding">
-                    <img class="img-responsive" src="img/speaker1.png" alt="" />
+                    <img class="img-responsive" src="img/speaker/speaker1.png" alt="" />
                 </div>
                     
                 <div class="col-md-7 col-lg-7">
