(ITGM#7) доработки (цитаты+фото правильные ссылки+стили чутка)

--- a/itgm7/itgm_temp.html
+++ b/itgm7/itgm_temp.html
@@ -237,7 +237,7 @@ title: IT Global Meetup #7
 
 
 <!-- Promo Video -->
-<!-- <iframe src="https://player.vimeo.com/video/138511320?title=0&byline=0&portrait=0" width="100%" height="506" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
+ <!--<iframe src="https://player.vimeo.com/video/138511320?title=0&byline=0&portrait=0" width="100%" height="506" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
 
 
 
@@ -523,7 +523,6 @@ title: IT Global Meetup #7
 
 
 
-
 <!-- GALLERY -->
 <section id="gallery">
     <div class="container">
@@ -576,8 +575,20 @@ title: IT Global Meetup #7
 
                         <div class="item">
                             <img class="img-circle" src="img/testimonials_photo/testimonial3.png" alt="">
-                            <p class="lead">Делитесь знаниями, не жадничайте!</p>
-                            <p class="name">Сергей Сёмка</p>
+                            <p class="lead">Формат форумов и текстовых статей уходит в прошлое!<br>
+                                У нас всех есть замечательная возможность делиться личным опытом!<br>
+                                Выступать на митапах, обсуждать, задавать вопросы и делиться профессиональным опытом!<br>
+                                Это замечательная, а самое главное, бесплатная возможность!</p>
+                            <p class="name">Сергей Сёмка, программист Piter United</p>
+                        </div>
+
+                        <div class="item">
+                            <img class="img-circle" src="img/testimonials_photo/testimonial3.png" alt="">
+                            <p class="lead">Формат форумов и текстовых статей уходит в прошлое!<br>
+                                            У нас всех есть замечательная возможность делиться личным опытом!<br>
+                                            Выступать на митапах, обсуждать, задавать вопросы и делиться профессиональным опытом!<br>
+                                            Это замечательная, а самое главное, бесплатная возможность!</p>
+                            <p class="name">Андрей Толмачев, </p>
                         </div>
                     </div>
                 </div>
