--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -567,7 +567,7 @@ title: IT Global Meetup #7
                         </div>
 
                         <div class="item">
-                            <img class="img-circle" src="img/testimonials_photo/testimonial2.png" alt="">
+                            <img class="img-circle" src="img/testimonials_photo/testimonial2.jpg" alt="">
                             <p class="lead">Мы уходим от формата «один говорит - остальные слушают».<br>
                                             Открытая площадка и общение с коллегами из других компаний -<br>
                                             это ценнейший ресурс и огромный стимул для роста активных IT-специалистов.</p>
