(ITGM#7) добавил логотипы "часов" в программу и текст чуть-чуть темнее сделал мелкий
(генерация с помощью: http://www.oliverboorman.biz/projects/tools/clocks.php)

--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -349,7 +349,7 @@ title: IT Global Meetup #7
                                             </div>
 
                                             <div class="col-lg-10 col-md-10 col-sm-10">
-                                                <!--<p class="place-name uppercase">холл</p>-->
+                                                <!--<p class="speaker-name uppercase">холл</p>-->
                                                 <!--<h4>заголовок</h4>-->
                                                 <p>{{program.text}}</p>
                                                 <br>
