(ITGM#7) "подробная карта" теперь открывается в новом окне, добавил ссылку на программу (только для чтения)

--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -398,7 +398,7 @@ title: IT Global Meetup #7
                             В рамках секций вы сможете получить новые знания, задать вопросы,<br>
                             поделиться профессиональным опытом и обменяться контактами.</p>
                         <br>
-                        <a class="button button-small button-line-dark" href="#">открыть программу</a>
+                        <a class="button button-small button-line-dark" href="https://docs.google.com/spreadsheets/d/1IkVe1NmC4xDiSsNh5BS2-H78diSxQWYOrgDP1OKIM8Y/pubhtml?gid=1681023721&single=true" target="_blank">открыть программу</a>
                     </div>
                 </div>
             </div>
@@ -597,7 +597,7 @@ title: IT Global Meetup #7
                         <i class="pe-4x pe-7s-map-2"></i>
                         <h4 class="">Карта проезда</h4>
                         <p>Санкт-Петербург.<br>пр. Медиков д.3 корп.1</p>
-                        <a class="button button-xsmall button-line-light" href="/itgm/map.html">Подробная карта</a>
+                        <a class="button button-xsmall button-line-light" href="/itgm/map.html" target="_blank">Подробная карта</a>
                     </div>
                 </div>
             </div>
