--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -29,6 +29,18 @@ title: IT Global Meetup #7
             <a href="/main.html"><img src="img/site_logo/main_logo_white.png" alt="logo" class="img-responsive"
                                       width="40px"></a>
         </div>
+        <div class="text-right">
+            <!--<div class="right floated meta">-->
+                <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="small"
+                     data-yashareQuickServices="vkontakte,facebook,twitter,gplus,odnoklassniki,moimir"
+                     data-yashareTheme="counter"
+                     data-yashareTitle="IT Global Meetup #7"
+                     data-yashareDescription="02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - пр. Медиков 3"
+                     data-yashareLink="http://piter-united.ru/itgm7/itgm.html"
+                     data-yashareImage="http://piter-united.ru/img/partners/itgm_logo.png">
+                <!--</div>-->
+            </div>
+        </div>
 
         <div class="collapse navbar-collapse" id="nav">
             <ul class="nav navbar-nav navbar-right uppercase">
@@ -604,3 +616,44 @@ title: IT Global Meetup #7
         </div>
     </div>
 </section>
+
+
+<!-- Footer -->
+<section id="footer">
+<div id="footer" class="container" >
+    <div class="row">
+        <div class="col-lg-5">
+            <div class="text-left">
+                <div class="header">Предыдущие мероприятия</div>
+            <div class="content">
+                <a class="ui label" href="https://vk.com/album-71691819_225597343" target="_blank">itgm#6</a>
+                <a class="ui label" href="https://vk.com/album-71691819_217393589" target="_blank">itgm#5</a>
+                <a class="ui label" href="https://vk.com/album-71691819_212678522" target="_blank">itgm#4</a>
+                <a class="ui label" href="https://vk.com/album-71691819_207371421" target="_blank">itgm#3</a>
+                <a class="ui label" href="https://vk.com/album-71691819_197045853" target="_blank">itgm#2</a>
+                <a class="ui label" href="#">itgm#1</a>
+            </div>
+
+        </div>
+        </div>
+        <div class="col-lg-2">
+            <p class="text-center"><b>PiterUnited@gmail.com</b></p>
+            <!--<a class="link" href="http://piter-united.ru/main.html" target="_blank">IT-сообщества Санкт-Петербурга</a>-->
+        </div>
+        <div class="col-lg-5">
+            <div class="text-right">
+                <div class="header">Мы в социальных сетях</div>
+            <div class="content">
+                <a class="ui label" href="https://plus.google.com/u/0/communities/108851235934496354072" target="_blank"><i class="large google plus icon"></i></a>
+                <a class="ui label" href="https://twitter.com/piter_united" target="_blank"><i class="large twitter icon"></i></a>
+                <a class="ui label" href="https://medium.com/@piterunited" target="_blank"><i class="large medium icon"></i></a>
+                <a class="ui label" href="https://www.facebook.com/groups/piterunited/" target="_blank"><i class="large facebook icon"></i></a>
+                <a class="ui label" href="https://vk.com/piterunited" target="_blank"><i class="large vk icon"></i></a>
+                <a class="ui label" href="https://www.linkedin.com/grp/home?gid=8117058" target="_blank"><i class="large linkedin icon"></i></a>
+            </div>
+        </div>
+
+    </div>
+</div>
+</section>
+<!--endof Footer -->
