--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -445,21 +445,21 @@ title: IT Global Meetup #7
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h3> Партнеры </h3>
+                <h3> Партнеры мероприятия</h3>
                 <p class="lead">Инициативу и слет поддерживают лучшие IT-компании.</p>
                 <div id="sponsors-carousel">
                     {% for sponsor in site.data.itgm7_sponsors %}
                     <a href="{{sponsor.link}}" target="_blank" title="{{sponsor.desc}}">
-                        <div class="sponsor col-md-3">
-                            <img class="img-responsive" src="{{sponsor.logo}}" height="80px" alt="{{sponsor.title}}">
+                        <div class="sponsor col-lg-2">
+                            <img class="img-responsive" width="150px" src="{{sponsor.logo}}" alt="{{sponsor.title}}">
                             {% if sponsor.level == "Золотой партнер" %}
                             <b>
-                                <div class="label-sponsor-gold">{{sponsor.level}}</div>
+                                <div >{{sponsor.level}}</div>
                             </b>
                             {% elsif sponsor.level == "Серебряный партнер" %}
-                            <div class="label-sponsor-silver">{{sponsor.level}}</div>
+                            <div >{{sponsor.level}}</div>
                             {% elsif sponsor.level == "Организатор" %}
-                            <div class="label-sponsor-initiator">{{sponsor.level}}</div>
+                            <div >{{sponsor.level}}</div>
                             {% else %}
                             {{sponsor.level}}
                             {% endif %}
@@ -480,13 +480,13 @@ title: IT Global Meetup #7
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h3>Официальные инфопартнеры</h3>
+                <h3>Информационные партнеры</h3>
                 <p class="lead">Инициативу и слет поддерживают лучшие IT-компании.</p>
                 <div id="sponsors-carousel">
-                    {% for sponsor in site.data.itgm7_sponsors %}
+                    {% for sponsor in site.data.itgm7_infopartners %}
                     <a href="{{sponsor.link}}" target="_blank">
                         <div class="sponsor col-md-3">
-                            <img class="img-responsive" src="img/sponsors/sponsor2.png" alt="">
+                            <img class="img-responsive" width="150px" src="{{sponsor.logo}}" alt="{{sponsor.title}}">
                         </div>
                     </a>
                     {% endfor %}
