(ITGM#7) верстку и картинки спонсоров исправил чутка

--- a/itgm7/itgm_temp.html
+++ b/itgm7/itgm_temp.html
@@ -484,7 +484,7 @@ title: IT Global Meetup #7
                     {% for sponsor in site.data.itgm7_sponsors %}
                     <a href="{{sponsor.link}}" target="_blank">
                         <div class="sponsor col-md-3">
-                            <img class="img-responsive" src="img/sponsors/sponsor2.png" alt="">
+                            <img class="img-responsive" src="img/partners/sponsor2.png" alt="">
                         </div>
                     </a>
                     {% endfor %}
