--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -443,26 +443,32 @@ title: IT Global Meetup #7
 <!-- SPONSORS -->
 <section id="sponsors">
     <div class="container">
-        <div class="row">
+        <div class="row" >
             <div class="col-lg-12">
                 <h3> Партнеры мероприятия</h3>
                 <p class="lead">Инициативу и слет поддерживают лучшие IT-компании.</p>
                 <div id="sponsors-carousel">
                     {% for sponsor in site.data.itgm7_sponsors %}
                     <a href="{{sponsor.link}}" target="_blank" title="{{sponsor.desc}}">
-                        <div class="sponsor col-lg-2">
-                            <img class="img-responsive" width="150px" src="{{sponsor.logo}}" alt="{{sponsor.title}}">
-                            {% if sponsor.level == "Золотой партнер" %}
-                            <b>
-                                <div >{{sponsor.level}}</div>
-                            </b>
+                        <div class="col-lg-2 col-md-2 col-sm-2">
+                            <div align="center">
+                            <img class="img-responsive" src="{{sponsor.logo}}" alt="{{sponsor.title}}">
+                            <div class="text-muted">
+                                <!--<div align="center">-->
+                            {{sponsor.level}}
+                            </div>
+<!--                            {% if sponsor.level == "Золотой партнер" %}
+                            <b>-->
+                                <!--<div class="center">{{sponsor.level}}</div>-->
+                            <!--</b>
                             {% elsif sponsor.level == "Серебряный партнер" %}
                             <div >{{sponsor.level}}</div>
                             {% elsif sponsor.level == "Организатор" %}
                             <div >{{sponsor.level}}</div>
                             {% else %}
                             {{sponsor.level}}
-                            {% endif %}
+                            {% endif %}-->
+                            </div>
                         </div>
                     </a>
                     {% endfor %}
@@ -485,7 +491,7 @@ title: IT Global Meetup #7
                 <div id="sponsors-carousel">
                     {% for sponsor in site.data.itgm7_infopartners %}
                     <a href="{{sponsor.link}}" target="_blank">
-                        <div class="sponsor col-md-3">
+                        <div class="sponsor col-lg-2">
                             <img class="img-responsive" width="150px" src="{{sponsor.logo}}" alt="{{sponsor.title}}">
                         </div>
                     </a>
