(ITGM#7) поправил верстку

--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -19,18 +19,22 @@ title: IT Global Meetup #7
 <nav id="nav-primary" class="navbar navbar-custom" role="navigation">
     <div class="container">
 
+
         <div class="text-right">
-            <!--<div class="right floated meta">-->
-            <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="small"
-                 data-yashareQuickServices="vkontakte,facebook,twitter,gplus,odnoklassniki,moimir"
-                 data-yashareTheme="counter"
-                 data-yashareTitle="IT Global Meetup #7"
-                 data-yashareDescription="02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - пр. Медиков 3"
-                 data-yashareLink="http://piter-united.ru/itgm7/itgm.html"
-                 data-yashareImage="http://piter-united.ru/img/partners/itgm_logo.png">
-                <!--</div>-->
-            </div>
+
+            <div class="ya-share2"
+                 data-services="vkontakte,facebook,twitter,gplus,linkedin,viber,whatsapp,odnoklassniki,moimir"
+                 data-counter
+                 data-image="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png"
+                 data-lang="ru"
+                 counter="true"
+                 data-size="s"
+                 data-title="IT Global Meetup #7"
+                 data-description="02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3."
+                 data-url="http://piter-united.ru/itgm7/itgm.html"></div>
         </div>
+
+        <!--</div>-->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav">
                 <span class="sr-only">Toggle navigation</span>
@@ -53,8 +57,7 @@ title: IT Global Meetup #7
                 <li><a data-toggle="elementscroll" href="#venue">Место проведения</a></li>
             </ul>
         </div>
-
-    </div>
+        </div>
 </nav>
 
 
