(ITGM#7) переключил перенаправление на ITGM #7 (+отключил шаринг через Google PLUS - картинку так и хочет какую-нибудь из спонсоров вставить)

--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -22,8 +22,10 @@ title: IT Global Meetup #7
 
         <div class="text-right">
 
+            <!--data-services="vkontakte,facebook,twitter,gplus,linkedin,viber,whatsapp,odnoklassniki,moimir"-->
+            <!-- c gplus какие-то проблемы (картинку так и хочет от спонсора вствить) by Semka 2016-03-09 -->
             <div class="ya-share2"
-                 data-services="vkontakte,facebook,twitter,gplus,linkedin,viber,whatsapp,odnoklassniki,moimir"
+                 data-services="vkontakte,facebook,twitter,linkedin,viber,whatsapp,odnoklassniki,moimir"
                  data-counter
                  data-image="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png"
                  data-lang="ru"
