(ITGM#7) чутка поправил стили + карту чуть сместил

--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -16,8 +16,8 @@ title: IT Global Meetup #7
 
 
 <!-- NAVIGATION -->
-<nav id="nav-primary" class="navbar navbar-custom" role="navigation">
-    <div class="container">
+<nav id="nav-primary" class="navbar navbar-custom" role="navigation" style="height: 75px; padding-top:0px">
+    <div class="container" style="height: 75px; padding-top:0px; line-height:5px; padding-top:0px">
 
 
         <div class="text-right">
@@ -433,7 +433,7 @@ title: IT Global Meetup #7
             <div class="col-lg-12">
                 <h3 class="text-center">Регистрация</h3>
                 <p class="lead text-center">Целевая аудитория мероприятия: IT-специалисты.<br>
-                    Участие бесплатное. Обязательным условием является регистрация.</p>
+                    Участие бесплатное. Обязательным условием является регистрация.</p> <br>
             </div>
             <div class="col-lg-12 text-center">
                 <a class="button button-small button-line-light html-popup" href="register.html">зарегистрироваться</a>
