--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -12,9 +12,6 @@ title: IT Global Meetup #7
     </div>
 </div>
 
-
-
-
 <!-- NAVIGATION -->
 <nav id="nav-primary" class="navbar navbar-custom" role="navigation" style="height: 75px; padding-top:0px">
     <div class="container" style="height: 75px; padding-top:0px; line-height:5px; padding-top:0px">
@@ -25,7 +22,7 @@ title: IT Global Meetup #7
             <!--data-services="vkontakte,facebook,twitter,gplus,linkedin,viber,whatsapp,odnoklassniki,moimir"-->
             <!-- c gplus какие-то проблемы (картинку так и хочет от спонсора вствить) by Semka 2016-03-09 -->
             <div class="ya-share2"
-                 data-services="vkontakte,facebook,twitter,linkedin,viber,whatsapp,odnoklassniki,moimir"
+                 data-services="vkontakte,facebook,gplus,twitter,linkedin,viber,whatsapp,odnoklassniki,moimir"
                  data-counter
                  data-image="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png"
                  data-lang="ru"
