--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -323,7 +323,7 @@ title: IT Global Meetup #7
                 <!-- SCHEDULE TAB -->
                 <ul id="myTab" class="nav nav-tabs" role="tablist">
                     <li role="presentation" class="active"><a href="#day1" id="day1-tab" role="tab" data-toggle="tab"
-                                                              aria-controls="day1" aria-expanded="true">26 марта</a>
+                                                              aria-controls="day1" aria-expanded="true">02 апреля</a>
                     </li>
                 </ul>
 
