(ITGM#7) исправил опечатку: гаЛЛерея --> фотогалерея

--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -52,7 +52,7 @@ title: IT Global Meetup #7
                 <li><a data-toggle="elementscroll" href="#program">Программа</a></li>
                 <li><a data-toggle="elementscroll" href="#register">Регистрация</a></li>
                 <li><a data-toggle="elementscroll" href="#sponsors">Партнеры</a></li>
-                <li><a data-toggle="elementscroll" href="#gallery">Галлерея</a></li>
+                <li><a data-toggle="elementscroll" href="#gallery">Фотогалерея</a></li>
                 <li><a data-toggle="elementscroll" href="#venue">Место проведения</a></li>
             </ul>
         </div>
@@ -539,7 +539,7 @@ title: IT Global Meetup #7
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h3> Галерея </h3>
+                <h3> Фотогалерея </h3>
                 <p class="lead">Фотографии с прошлых мероприятий.</p>
 
                 <div id="timeline" data-columns>
