--- a/itgm7/itgm_temp.html
+++ b/itgm7/itgm_temp.html
@@ -38,7 +38,7 @@ title: IT Global Meetup #7
                 <!-- <li><a data-toggle="elementscroll" href="#venue">Venue</a></li> -->
                 <li><a data-toggle="elementscroll" href="#register">Регистрация</a></li>
                 <li><a data-toggle="elementscroll" href="#sponsors">Партнеры</a></li>
-                <li><a data-toggle="elementscroll" href="#gallery">Галлерея</a></li>
+                <li><a data-toggle="elementscroll" href="#gallery">Фотогалерея</a></li>
                 <li><a data-toggle="elementscroll" href="#footer">Контакты</a></li>
             </ul>
         </div>
@@ -528,7 +528,7 @@ title: IT Global Meetup #7
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h3> Галерея </h3>
+                <h3> Фотогалерея </h3>
                 <p class="lead">Фотографии с прошлых мероприятий.</p>
 
                 <div id="timeline" data-columns>
