(ITGM#7) закомментировал PRELOADING (тормоза пока грузятся скрипты и картинки - все висит)

--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -3,14 +3,18 @@ layout: itgm7
 title: IT Global Meetup #7
 ---
 
+<!--
 
 
-<!--PRELOADING-->
+&lt;!&ndash;PRELOADING&ndash;&gt;
 <div id="preload">
     <div class="preload">
         <div class="spinner"></div>
     </div>
 </div>
+
+-->
+
 
 <!-- NAVIGATION -->
 <nav id="nav-primary" class="navbar navbar-custom" role="navigation" style="height: 75px; padding-top:0px">
