--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -71,6 +71,16 @@ title: IT Global Meetup #7
     <div class="col-md-6 col-xs-12">
         <h1>IT Global Meetup #7</h1>
         <p>2 апреля 2016 c 11.00 до 18.00 <br> КДЦ "Club House", пр. Медиков д.3 к.1</p>
+            <div itemprop="location" itemscope itemtype="http://schema.org/Place">
+                <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                    <meta itemprop="name" content="КДЦ Club House"/>
+                    <meta itemprop="streetAddress" content="пр. Медиков д.3 к.1"/>
+                    <meta itemprop="addressLocality" content="Санкт-Петербург"/>
+                    <meta itemprop="addressRegion" content="SPB"/>
+                    <meta itemprop="postalCode" content="123456"/>
+                    <meta itemprop="addressCountry" content="RU"/>
+                </div>
+            </div>
         <br>
         <a class="button button-small button-line-light html-popup" href="register.html">зарегистрироваться</a>
     </div>
