--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -72,6 +72,7 @@ title: IT Global Meetup #7
         <h1>IT Global Meetup #7</h1>
         <p>2 апреля 2016 c 11.00 до 18.00 <br> КДЦ "Club House", пр. Медиков д.3 к.1</p>
             <div itemprop="location" itemscope itemtype="http://schema.org/Place">
+                <meta itemprop="name" content="КДЦ Club House"/>
                 <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                     <meta itemprop="name" content="КДЦ Club House"/>
                     <meta itemprop="streetAddress" content="пр. Медиков д.3 к.1"/>
