--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -24,9 +24,10 @@ title: IT Global Meetup #7
         <div class="text-right">
 
             <!--data-services="vkontakte,facebook,twitter,gplus,linkedin,viber,whatsapp,odnoklassniki,moimir"-->
+            <!--data-services="vkontakte,facebook,gplus,twitter,linkedin,viber,whatsapp,odnoklassniki,moimir"-->
             <!-- c gplus какие-то проблемы (картинку так и хочет от спонсора вствить) by Semka 2016-03-09 -->
             <div class="ya-share2"
-                 data-services="vkontakte,facebook,gplus,twitter,linkedin,viber,whatsapp,odnoklassniki,moimir"
+                 data-services="vkontakte,twitter,linkedin,viber,whatsapp,odnoklassniki,moimir"
                  data-counter
                  data-image="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png"
                  data-lang="ru"
@@ -34,7 +35,7 @@ title: IT Global Meetup #7
                  data-size="s"
                  data-title="IT Global Meetup #7"
                  data-description="02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3."
-                 data-url="http://piter-united.ru/itgm7/itgm.html"></div>
+                 data-url="http://piter-united.ru"></div>
         </div>
 
         <!--</div>-->
