(ITGM#7) url картинки исправил обратно ч1

--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -29,13 +29,13 @@ title: IT Global Meetup #7
             <div class="ya-share2"
                  data-services="vkontakte,twitter,linkedin,viber,whatsapp,odnoklassniki,moimir"
                  data-counter
-                 data-image="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png"
+                 data-image="//itgm7/img/site_logo/itgm_logo2.png"
                  data-lang="ru"
                  counter="true"
                  data-size="s"
                  data-title="IT Global Meetup #7"
                  data-description="02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3."
-                 data-url="http://piter-united.ru"></div>
+                 data-url="http://piter-united.ru/itgm7/itgm_temp.html"></div>
         </div>
 
         <!--</div>-->
