--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -35,7 +35,7 @@ title: IT Global Meetup #7
                  data-size="s"
                  data-title="IT Global Meetup #7"
                  data-description="02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3."
-                 data-url="http://piter-united.ru/itgm7/itgm_temp.html"></div>
+                 data-url="http://piter-united.ru/itgm7/itgm.html"></div>
         </div>
 
         <!--</div>-->
