(ITGM#7) url картинки исправил обратно ч3

--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -27,9 +27,9 @@ title: IT Global Meetup #7
             <!--data-services="vkontakte,facebook,gplus,twitter,linkedin,viber,whatsapp,odnoklassniki,moimir"-->
             <!-- c gplus какие-то проблемы (картинку так и хочет от спонсора вствить) by Semka 2016-03-09 -->
             <div class="ya-share2"
-                 data-services="vkontakte,twitter,linkedin,viber,whatsapp,odnoklassniki,moimir"
+                 data-services="vkontakte,twitter,viber,linkedin,whatsapp,odnoklassniki,moimir"
                  data-counter
-                 data-image="//itgm7/img/site_logo/itgm_logo2.png"
+                 data-image="http://itgm7/img/site_logo/itgm_logo2.png"
                  data-lang="ru"
                  counter="true"
                  data-size="s"
