--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -22,7 +22,7 @@ title: IT Global Meetup #7
 
 
         <div class="text-right">
-
+            <iframe src="https://piter-united.herokuapp.com/iframe" class="__slackin slack" style="border-width: 0px; width: 108px; height: 27px; visibility: visible;"></iframe>
             <!--data-services="vkontakte,facebook,twitter,gplus,linkedin,viber,whatsapp,odnoklassniki,moimir"-->
             <!--data-services="vkontakte,facebook,gplus,twitter,linkedin,viber,whatsapp,odnoklassniki,moimir"-->
             <!-- c gplus какие-то проблемы (картинку так и хочет от спонсора вствить) by Semka 2016-03-09 -->
@@ -94,7 +94,7 @@ title: IT Global Meetup #7
 <!-- FULLSCREEN SLIDER -->
 <!-- <div class="tp-banner-container">
   <div class="tp-banner">
-    <ul>  
+    <ul>
       <li data-transition="slidevertical" data-slotamount="1" data-masterspeed="1000" data-thumb="img/slide_thumb_1.jpg"  data-saveperformance="off"  data-title="Slide">
           <img src="img/texture4_.jpg"  alt="fullslide1"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
           <div style="z-index: 3;">
@@ -116,7 +116,7 @@ title: IT Global Meetup #7
               data-endeasing="Power4.easeIn"
               style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;">IT Global Meetup #7
           </div>
-  
+
           <div class="tp-caption light_medium_30_shadowed lfb ltt tp-resizeme"
               data-x="center" data-hoffset="240"
               data-y="center" data-voffset="10"
@@ -134,8 +134,8 @@ title: IT Global Meetup #7
               <a class="button button-small button-line-light html-popup" href="register.html">register now</a>
           </div>
       </li>
-    </ul>   
-    <div class="tp-bannertimer"></div>  
+    </ul>
+    <div class="tp-bannertimer"></div>
   </div>
 </div> -->
 
