--- a/itgm8/itgm.html
+++ b/itgm8/itgm.html
@@ -17,38 +17,36 @@ title: IT Global Meetup #8
 
 
 <!-- NAVIGATION -->
-<nav id="nav-primary" class="navbar navbar-custom" role="navigation" style="padding-top:0px">
-    <div class="container" style="padding-top:0px; line-height:5px; padding-top:0px">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/main.html"><img src="img/site_logo/main_logo_white.png" alt="logo" class="img-responsive" width="40px"></a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="nav">
-            <ul class="nav navbar-nav navbar-right uppercase">
-                <li><a data-toggle="elementscroll" href="#info">О мероприятии</a></li>
-                <li><a data-toggle="elementscroll" href="#communities">Сообщества</a></li>
-                <li><a data-toggle="elementscroll" href="#program">Программа</a></li>
-                <li><a data-toggle="elementscroll" href="#register">Регистрация</a></li>
-                <li><a data-toggle="elementscroll" href="#sponsors">Партнеры</a></li>
-                <li><a data-toggle="elementscroll" href="#gallery">Фотогалерея</a></li>
-                <li><a data-toggle="elementscroll" href="#venue">Место проведения</a></li>
-            </ul>
-        </div>
-        </div>
-</nav>
-
-
-
-
 <div class="slider">
+    <div class="navbar-container">
+        <nav id="nav-primary" class="navbar navbar-custom" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/main.html"><img src="img/site_logo/main_logo_white.png" alt="logo" class="img-responsive" width="40px"></a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="nav">
+                    <ul class="nav navbar-nav navbar-right uppercase">
+                        <li><a data-toggle="elementscroll" href="#info">О мероприятии</a></li>
+                        <li><a data-toggle="elementscroll" href="#communities">Сообщества</a></li>
+                        <li><a data-toggle="elementscroll" href="#program">Программа</a></li>
+                        <li><a data-toggle="elementscroll" href="#register">Регистрация</a></li>
+                        <li><a data-toggle="elementscroll" href="#sponsors">Партнеры</a></li>
+                        <li><a data-toggle="elementscroll" href="#gallery">Фотогалерея</a></li>
+                        <li><a data-toggle="elementscroll" href="#venue">Место проведения</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
     <div class="container-fluid">
-        <div class="row" style="margin-bottom: 190px;">
+        <div class="row content">
             <div class="col-md-offset-5 col-md-7 col-xs-12">
                 <div class="row">
                     <div class="col-md-12">
