--- a/itgm9/itgm.html
+++ b/itgm9/itgm.html
@@ -445,22 +445,22 @@ metrics:
                             <p class="lead">Сообщество - это инструмент сильных компаний.<br>
                                             Их лидеры, выходя в сообщества и рассказывая о том «как» и «над чем» они работают,<br>
                                             притягивают людей близких «по духу», превращая их в мотивированных сотрудников.</p>
-                            <p class="name">Михаил Рыжиков, идеолог Piter United</p>
+                            <p class="name">Михаил Рыжиков, идейный вдохновитель Piter United</p>
                         </div>
 
-                        <div class="item">
+                        <!-- <div class="item">
                             <img class="img-circle" src="img/testimonials_photo/testimonial2.jpg" alt="">
                             <p class="lead">Мы уходим от формата «один говорит - остальные слушают».<br>
                                             Открытая площадка и общение с коллегами из других компаний -<br>
                                             это ценнейший ресурс и огромный стимул для роста активных IT-специалистов.</p>
                             <p class="name">Евгений Крапивко, активист Piter United</p>
-                        </div>
+                        </div> -->
 
-                        <div class="item">
+                        <!-- <div class="item">
                             <img class="img-circle" src="img/testimonials_photo/testimonial3.png" alt="">
                             <p class="lead">Делитесь знаниями, не жадничайте!</p>
                             <p class="name">Сергей Сёмка</p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
