--- a/itgm9/itgm.html
+++ b/itgm9/itgm.html
@@ -448,19 +448,19 @@ metrics:
                             <p class="name">Михаил Рыжиков, идейный вдохновитель Piter United</p>
                         </div>
 
-                        <!-- <div class="item">
+                         <div class="item">
                             <img class="img-circle" src="img/testimonials_photo/testimonial2.jpg" alt="">
                             <p class="lead">Мы уходим от формата «один говорит - остальные слушают».<br>
                                             Открытая площадка и общение с коллегами из других компаний -<br>
                                             это ценнейший ресурс и огромный стимул для роста активных IT-специалистов.</p>
                             <p class="name">Евгений Крапивко, активист Piter United</p>
-                        </div> -->
+                        </div> 
 
-                        <!-- <div class="item">
+                         <div class="item">
                             <img class="img-circle" src="img/testimonials_photo/testimonial3.png" alt="">
                             <p class="lead">Делитесь знаниями, не жадничайте!</p>
                             <p class="name">Сергей Сёмка</p>
-                        </div> -->
+                        </div> 
                     </div>
                 </div>
             </div>
