change main page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <!-- HTML meta refresh URL redirection -->
     <meta http-equiv="refresh"
-          content="0; url=/itgm9/itgm.html">
+          content="0; url=/main.html">
 </head>
 <body>
 </body>
