--- a/about/version.html
+++ b/about/version.html
@@ -1,5 +1,5 @@
 ---
-layout: post.html
+layout: about
 title: environment & version
 ---
 <p><b>environment:</b> {{ jekyll.environment }}, {{ jekyll.version }}</p>
